--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -24,7 +24,7 @@ body {
 
 .hover:hover {
   transform: scale(1.05);
-  box-shadow: 5px 5px 15px 5px #111111;
+  box-shadow: 5px 5px 15px 5px #000000;
   transition-duration: 0.5s;
   z-index: 1;
 }
@@ -34,5 +34,5 @@ main{
 }
 
 article{
-  height: 22rem;
+  min-height: 20rem;
 }
