--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,10 +25,20 @@ body {
   z-index: 1;
 }
 
-main{
+main {
   min-height: 80vh;
 }
 
-article{
+article {
   min-height: 20rem;
+}
+
+.mgn {
+  margin-top: 72px;
+}
+
+@media screen and (max-width: 768px) {
+  .mgn {
+    margin-top: 58px;
+  }
 }
